[project]
name = "netease-music-api"
version = "1.0.0"
description = "网易云音乐无损解析工具 - 支持歌曲搜索、单曲解析、歌单解析、专辑解析和音乐下载"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==43.0.3",
    "Flask==3.0.3",
    "frozenlist==1.7.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "MarkupSafe==3.0.2",
    "multidict==6.6.4",
    "mutagen==1.47.0",
    "propcache==0.3.2",
    "pycparser==2.22",
    "qrcode==8.2",
    "requests==2.32.3",
    "urllib3==2.2.3",
    "Werkzeug==3.1.3",
    "yarl==1.20.1",
]
